
12.0.31 23/August/2021
- Better GFF3 compression
- Many minor bug fixes and cosmetics

12.0.32 26/August/2021
- Faster loading of reference files

12.0.33 31/August/2021
- Fix backward compatability issue of decompressing FASTQ files compressed with --pair in v9.0.12 or earlier 
- FASTQ: genocat --seq-only and genocat --qual-only: output only the Sequence / Quality lines
- DVCF:  genocat --single-coord : Generates single-coordinate ("normal") VCF. Can be used with or without --luft
- DVCF:  genocat --contigs --luft: show the contigs of the Luft coordinate 
- FASTA: support --make-reference when contigs in FASTA are sequential (i.e. not broken into short lines)
- SAM/BAM/FASTQ/FASTA/Kraken: better compression of QNAME / Description 
- SAM/BAM/FASTQ: Faster compression of long reads
- bug fixes

12.0.34 9/September/2021
- Compile without -march=native for genozip-linux-x86_64 and Windows Installer distributions
- Better support for IUPAC "bases" in reference files
- DVCF: detect many-to-one coordinate mapping and generate an .overlaps file
- VCF: better INFO/ANN, INFO/CLNHGVS, INFO/CSQ compression
- SAM/BAM/FASTQ/FASTA/Kraken: better compression of QNAME / Description 
- SAM/BAM: Faster compression and decompression of SA, OA, XA with long reads 
- Faster --test
- More robust compression from a URL, even on flakey connections
- Improved --STATS report
- bug fixes

12.0.35 
- Add: genozip --match-chrom-to-reference: rewrite contig names to match the provided reference file (eg "22"->"chr22")
- Chain files can now be subsetted with --regions
- Removed obsolete --with-chr
- Relax section 2f of the license
- More accurate progress indicator
- Better support for contigs named by accession number, eg "GL000192.1", "chrUn_JTFH01001867v2_decoy", "chr4_gl383528_alt"
- New advanced option: --debug-seg
- Advanced option --show-ref-alts renamed --show-chrom2ref
- Bug fixes
